[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
web-sys = {version="0.3.60",features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'ImageData',
  'HtmlCanvasElement',
  'Window',
]}
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen = "0.2.83"
image = "0.24.5"